--- a/source/DoulosSIL-Regular.ufo/lib.plist
+++ b/source/DoulosSIL-Regular.ufo/lib.plist
@@ -29,10 +29,10 @@
     <array/>
   </dict>
   <key>com.schriftgestaltung.appVersion</key>
-  <string>3251</string>
+  <string>3257</string>
   <key>com.schriftgestaltung.customParameter.GSFont.DisplayStrings</key>
   <array>
-    <string>o/CombCaronBlw o/CombSnakeBlw o/CombBreveBlw o/CombInvDblArchBlw/GrSmOmega o/CombLtnSmRBlw o/CombUpArrwBlw o/CombPlusSgnBlw o/CombSeagullBlw o/CombVertLineBlw/LtnSmIota o/CombOpnMrkBlw o/CombDblOpnMrkBlw</string>
+    <string>j/LtnSmJ.Dotless/LtnSmDotlessJStrk/LtnSmDotlessJStrkHook.DblSerif/LtnSmDotlessJStrkHook/LtnSmJStrk/LtnSmJCrossedTail/LtnSmJCrossedTail.Dotless/LtnSmCapJ J/CyCapJe/LtnCapJStrk/LtnCapJCrossedTail y/CySmU/LtnSmYStrk/LtnSmYHook.RtHook/LtnSmYLoop Y/LtnCapYStrk/CyCapStraightUStrk/LtnCapYHook/LtnCapYHook.RtHook/LtnCapYLoop/Space/CombOgonek</string>
   </array>
   <key>com.schriftgestaltung.customParameter.GSFont.disablesAutomaticAlignment</key>
   <true/>
