--- a/source/DoulosSIL-Regular.ufo/lib.plist
+++ b/source/DoulosSIL-Regular.ufo/lib.plist
@@ -85,6 +85,64 @@
       <integer>-443</integer>
     </dict>
   </dict>
+  <key>org.sil.lcg.bridgeLevels</key>
+  <dict>
+    <key>belowhigh</key>
+    <dict>
+      <key>LAnchorMax</key>
+      <integer>0</integer>
+      <key>LAnchorMin</key>
+      <integer>-100</integer>
+      <key>shiftX</key>
+      <integer>0</integer>
+      <key>shiftY</key>
+      <integer>400</integer>
+    </dict>
+    <key>belowlow</key>
+    <dict>
+      <key>LAnchorMax</key>
+      <integer>-101</integer>
+      <key>LAnchorMin</key>
+      <integer>-999</integer>
+      <key>shiftX</key>
+      <integer>0</integer>
+      <key>shiftY</key>
+      <integer>0</integer>
+    </dict>
+    <key>high</key>
+    <dict>
+      <key>UAnchorMax</key>
+      <integer>2999</integer>
+      <key>UAnchorMin</key>
+      <integer>1436</integer>
+      <key>shiftX</key>
+      <integer>0</integer>
+      <key>shiftY</key>
+      <integer>0</integer>
+    </dict>
+    <key>low</key>
+    <dict>
+      <key>UAnchorMax</key>
+      <integer>1000</integer>
+      <key>UAnchorMin</key>
+      <integer>900</integer>
+      <key>shiftX</key>
+      <integer>0</integer>
+      <key>shiftY</key>
+      <integer>-458</integer>
+    </dict>
+    <key>mid</key>
+    <dict>
+      <key>UAnchorMax</key>
+      <integer>1435</integer>
+      <key>UAnchorMin</key>
+      <integer>1001</integer>
+      <key>shiftX</key>
+      <integer>0</integer>
+      <key>shiftY</key>
+      <integer>-40</integer>
+    </dict>
+  </dict>
   <key>org.sil.lcg.toneLetters</key>
   <dict>
     <key>contourWidth</key>
