--- a/source/DoulosSIL-Regular.ufo/lib.plist
+++ b/source/DoulosSIL-Regular.ufo/lib.plist
@@ -764,6 +764,7 @@
     <string>LtnSmCCurl</string>
     <string>LtnSupSmCCurl</string>
     <string>LtnStretchedCCurl</string>
+    <string>CopSmEie</string>
     <string>LtnSmOpnO</string>
     <string>LtnSmOpnO.TopSerif</string>
     <string>LtnSupSmOpnO</string>
@@ -4591,6 +4592,8 @@
     <string>compComma</string>
     <key>CopCapEie</key>
     <string>uni2C88</string>
+    <key>CopSmEie</key>
+    <string>uni2C89</string>
     <key>CopyleftSgn</key>
     <string>u1F12F</string>
     <key>CopyrightSgn</key>
