--- a/source/DoulosSIL-Regular.ufo/lib.plist
+++ b/source/DoulosSIL-Regular.ufo/lib.plist
@@ -710,9 +710,11 @@ g/CombDblInvBreveBlw gg/CombDblBreveBlw gg/CombDblMacronBlw gg/CombDblRtArrwBlw 
     <string>CySubSmBe.Serb</string>
     <string>ModCySmBe.Serb</string>
     <string>CySmSoftSgn</string>
+    <string>ModCySmSoftSgn</string>
     <string>CySmSemisoftSgn</string>
     <string>CySmHardSgn</string>
     <string>CySubSmHardSgn</string>
+    <string>ModCySmHardSgn</string>
     <string>CySmYat</string>
     <string>CySmYeru</string>
     <string>CySubSmYeru</string>
@@ -2185,9 +2187,11 @@ g/CombDblInvBreveBlw gg/CombDblBreveBlw gg/CombDblMacronBlw gg/CombDblRtArrwBlw 
     <string>LtnSmTurnedV</string>
     <string>LtnSupSmTurnedV</string>
     <string>LtnSmRamsHorn.LrgBowl</string>
+    <string>LtnSupSmRamsHorn.LrgBowl</string>
     <string>LtnSmRamsHorn</string>
     <string>LtnSupSmRamsHorn</string>
     <string>LtnSmRamsHorn.GammaStyle</string>
+    <string>LtnSupSmRamsHorn.GammaStyle</string>
     <string>LtnSmGamma</string>
     <string>ModSmGamma</string>
     <string>GrSmGamma</string>
@@ -10369,6 +10373,10 @@ g/CombDblInvBreveBlw gg/CombDblBreveBlw gg/CombDblMacronBlw gg/CombDblRtArrwBlw 
     <string>q.sup</string>
     <key>LtnSupSmRamsHorn</key>
     <string>u10791</string>
+    <key>LtnSupSmRamsHorn.GammaStyle</key>
+    <string>u10791.GammaStyle</string>
+    <key>LtnSupSmRamsHorn.LrgBowl</key>
+    <string>u10791.LrgBowl</string>
     <key>LtnSupSmRamsHornDep</key>
     <string>uniF1B5</string>
     <key>LtnSupSmRevE</key>
@@ -10651,6 +10659,8 @@ g/CombDblInvBreveBlw gg/CombDblBreveBlw gg/CombDblMacronBlw gg/CombDblRtArrwBlw 
     <string>u1E033.Serb</string>
     <key>ModCySmHa</key>
     <string>u1E043</string>
+    <key>ModCySmHardSgn</key>
+    <string>uniA69C</string>
     <key>ModCySmI</key>
     <string>u1E038</string>
     <key>ModCySmIe</key>
@@ -10671,6 +10681,8 @@ g/CombDblInvBreveBlw gg/CombDblBreveBlw gg/CombDblMacronBlw gg/CombDblRtArrwBlw 
     <string>u1E04B</string>
     <key>ModCySmSha</key>
     <string>u1E046</string>
+    <key>ModCySmSoftSgn</key>
+    <string>uniA69D</string>
     <key>ModCySmStraightU</key>
     <string>u1E04F</string>
     <key>ModCySmStraightUStrk</key>
