--- a/source/DoulosSIL-Regular.ufo/lib.plist
+++ b/source/DoulosSIL-Regular.ufo/lib.plist
@@ -42,7 +42,8 @@ O/CombDblInvBreve.mid OO/CombDblBreve.mid OO/CombDblCircum.mid OO/CombDblTilde.m
 o/CombDblInvBreve.low oo/CombDblBreve.low oo/CombDblCircum.low oo/CombDblTilde.low oo/CombDblMacron.low oo/CombDblDiaer.low o
 o/CombDblInvBreveBlw.blwhigh oo/CombDblBreveBlw.blwhigh oo/CombDblMacronBlw.blwhigh oo/CombDblRtArrwBlw.blwhigh o
 g/CombDblInvBreveBlw gg/CombDblBreveBlw gg/CombDblMacronBlw gg/CombDblRtArrwBlw g/Space</string>
-    <string>/LftArrwStrk/LftRtArrw/LftRtArrwStrk n/UpArrwhd njof/Space/DwnArrwhd n/XOR n/NAND nf/NOR n43</string>
+    <string>/RtArrwStrk/RtArrw/DwnArrwhd/LftArrw/UpDwnArrw/UpArrwhd/UpDwnArrwWBase/LftArrwStrk/NOR/LftRtArrw/XOR/LftRtArrwStrk x=
+/ModUpArrwhd/ModDwnArrwhd p2/DwnArrwhd 9q6/XOR 5p/UpArrwhd d/NAND q/NOR l</string>
   </array>
   <key>com.schriftgestaltung.customParameter.GSFont.disablesAutomaticAlignment</key>
   <true/>
