--- a/source/DoulosSIL-Regular.ufo/glyphs/contents.plist
+++ b/source/DoulosSIL-Regular.ufo/glyphs/contents.plist
@@ -1876,6 +1876,8 @@
   <string>L_ftB_tmS_qrB_rac.glif</string>
   <key>LftCurlyBrac</key>
   <string>L_ftC_urlyB_rac.glif</string>
+  <key>LftCurlyBrac.sc</key>
+  <string>L_ftC_urlyB_rac.sc.glif</string>
   <key>LftDblArrw</key>
   <string>L_ftD_blA_rrw.glif</string>
   <key>LftDblParen</key>
@@ -1892,6 +1894,8 @@
   <string>L_ftP_aren.glif</string>
   <key>LftParen.Sophia</key>
   <string>L_ftP_aren.S_ophia.glif</string>
+  <key>LftParen.sc</key>
+  <string>L_ftP_aren.sc.glif</string>
   <key>LftPtngAngBrac</key>
   <string>L_ftP_tngA_ngB_rac.glif</string>
   <key>LftPtngDblAngQuotMrk</key>
@@ -1906,6 +1910,8 @@
   <string>L_ftS_glQ_uotM_rk.glif</string>
   <key>LftSqrBrac</key>
   <string>L_ftS_qrB_rac.glif</string>
+  <key>LftSqrBrac.sc</key>
+  <string>L_ftS_qrB_rac.sc.glif</string>
   <key>LftStemTnLtr1</key>
   <string>L_ftS_temT_nL_tr1.glif</string>
   <key>LftStemTnLtr1Dep</key>
@@ -7168,6 +7174,8 @@
   <string>R_tB_tmS_qrB_rac.glif</string>
   <key>RtCurlyBrac</key>
   <string>R_tC_urlyB_rac.glif</string>
+  <key>RtCurlyBrac.sc</key>
+  <string>R_tC_urlyB_rac.sc.glif</string>
   <key>RtDblArrw</key>
   <string>R_tD_blA_rrw.glif</string>
   <key>RtDblParen</key>
@@ -7184,6 +7192,8 @@
   <string>R_tP_aren.glif</string>
   <key>RtParen.Sophia</key>
   <string>R_tP_aren.S_ophia.glif</string>
+  <key>RtParen.sc</key>
+  <string>R_tP_aren.sc.glif</string>
   <key>RtPtngAngBrac</key>
   <string>R_tP_tngA_ngB_rac.glif</string>
   <key>RtPtngDblAngQuotMrk</key>
@@ -7192,6 +7202,8 @@
   <string>R_tS_glQ_uotM_rk.glif</string>
   <key>RtSqrBrac</key>
   <string>R_tS_qrB_rac.glif</string>
+  <key>RtSqrBrac.sc</key>
+  <string>R_tS_qrB_rac.sc.glif</string>
   <key>RtToLftEmbedding</key>
   <string>R_tT_oL_ftE_mbedding.glif</string>
   <key>RtToLftMrk</key>
