--- a/source/DoulosSIL-Regular.ufo/lib.plist
+++ b/source/DoulosSIL-Regular.ufo/lib.plist
@@ -29,7 +29,7 @@
     <array/>
   </dict>
   <key>com.schriftgestaltung.appVersion</key>
-  <string>3260</string>
+  <string>3306</string>
   <key>com.schriftgestaltung.customParameter.GSFont.DisplayStrings</key>
   <array>
     <string>ôöõÖÕÔf/LtnSmF.SItal/LtnSmFDotAbv/LtnSmFDotAbv.SItal/LtnSmFPalHook/LtnSmFMiddleTilde/LtnSmFHookStrk l/LtnSmLDotBlwMacron/Space i/LtnSmI.SItal/SmRomNumOne/LtnSmIRetrHook/LtnSmIStrk/LtnSmIStrkRetrHook/Space j/LtnSmJStrk/LtnSmJCrossedTail 
@@ -3234,6 +3234,12 @@ g/CombDblInvBreveBlw gg/CombDblBreveBlw gg/CombDblMacronBlw gg/CombDblRtArrwBlw 
     <string>ModEndHighTn</string>
     <string>ModEndLowTn</string>
     <string>GrCapXi</string>
+    <string>LftParen.sc</string>
+    <string>RtParen.sc</string>
+    <string>LftSqrBrac.sc</string>
+    <string>RtSqrBrac.sc</string>
+    <string>LftCurlyBrac.sc</string>
+    <string>RtCurlyBrac.sc</string>
     <string>LtnSmA.sc</string>
     <string>CySmA.sc</string>
     <string>LtnSmAAcute.sc</string>
@@ -6019,6 +6025,8 @@ g/CombDblInvBreveBlw gg/CombDblBreveBlw gg/CombDblMacronBlw gg/CombDblRtArrwBlw 
     <string>uni23A3</string>
     <key>LftCurlyBrac</key>
     <string>braceleft</string>
+    <key>LftCurlyBrac.sc</key>
+    <string>braceleft.sc</string>
     <key>LftDblArrw</key>
     <string>arrowdblleft</string>
     <key>LftDblParen</key>
@@ -6035,6 +6043,8 @@ g/CombDblInvBreveBlw gg/CombDblBreveBlw gg/CombDblMacronBlw gg/CombDblRtArrwBlw 
     <string>parenleft</string>
     <key>LftParen.Sophia</key>
     <string>compLftParen</string>
+    <key>LftParen.sc</key>
+    <string>parenleft.sc</string>
     <key>LftPtngAngBrac</key>
     <string>angleleft</string>
     <key>LftPtngDblAngQuotMrk</key>
@@ -6049,6 +6059,8 @@ g/CombDblInvBreveBlw gg/CombDblBreveBlw gg/CombDblMacronBlw gg/CombDblRtArrwBlw 
     <string>quoteleft</string>
     <key>LftSqrBrac</key>
     <string>bracketleft</string>
+    <key>LftSqrBrac.sc</key>
+    <string>bracketleft.sc</string>
     <key>LftStemTnLtr1</key>
     <string>uniA716</string>
     <key>LftStemTnLtr1Dep</key>
@@ -11311,6 +11323,8 @@ g/CombDblInvBreveBlw gg/CombDblBreveBlw gg/CombDblMacronBlw gg/CombDblRtArrwBlw 
     <string>uni23A6</string>
     <key>RtCurlyBrac</key>
     <string>braceright</string>
+    <key>RtCurlyBrac.sc</key>
+    <string>braceright.sc</string>
     <key>RtDblArrw</key>
     <string>arrowdblright</string>
     <key>RtDblParen</key>
@@ -11327,6 +11341,8 @@ g/CombDblInvBreveBlw gg/CombDblBreveBlw gg/CombDblMacronBlw gg/CombDblRtArrwBlw 
     <string>parenright</string>
     <key>RtParen.Sophia</key>
     <string>compRtParen</string>
+    <key>RtParen.sc</key>
+    <string>parenright.sc</string>
     <key>RtPtngAngBrac</key>
     <string>angleright</string>
     <key>RtPtngDblAngQuotMrk</key>
@@ -11335,6 +11351,8 @@ g/CombDblInvBreveBlw gg/CombDblBreveBlw gg/CombDblMacronBlw gg/CombDblRtArrwBlw 
     <string>quoteright</string>
     <key>RtSqrBrac</key>
     <string>bracketright</string>
+    <key>RtSqrBrac.sc</key>
+    <string>bracketright.sc</string>
     <key>RtToLftEmbedding</key>
     <string>uni202B</string>
     <key>RtToLftMrk</key>
