Update TypeTuner support (for comparing OT vs TypeTuner for new features) Also update flattened fea

--- a/source/featureinfo.yaml
+++ b/source/featureinfo.yaml
@@ -361,7 +361,7 @@
     - setting_value: 0
       setting_doc_desc: Standard (with bars)
       tt_setting_name: Standard (with bars)
-      tt_setting_tag: Barred
+      tt_setting_tag: Dflt
     - setting_value: 1
       setting_ui_label: Barless
       setting_doc_desc: Barless
