[RFS-931] Reencode LtnCapRamsHorn

--- a/source/DoulosSIL-Regular.ufo/lib.plist
+++ b/source/DoulosSIL-Regular.ufo/lib.plist
@@ -7051,7 +7051,7 @@ g/CombDblInvBreveBlw gg/CombDblBreveBlw gg/CombDblMacronBlw gg/CombDblRtArrwBlw 
     <key>LtnCapRRotunda</key>
     <string>uniA75A</string>
     <key>LtnCapRamsHorn</key>
-    <string>uniF26E</string>
+    <string>uniA7CB</string>
     <key>LtnCapRevCMiddleDot</key>
     <string>uniA73E</string>
     <key>LtnCapRevE</key>
