--- a/source/DoulosSIL-Regular.ufo/lib.plist
+++ b/source/DoulosSIL-Regular.ufo/lib.plist
@@ -29,7 +29,7 @@
     <array/>
   </dict>
   <key>com.schriftgestaltung.appVersion</key>
-  <string>3326</string>
+  <string>3316</string>
   <key>com.schriftgestaltung.customParameter.GSFont.DisplayStrings</key>
   <array>
     <string>l/CombDblInvBreve l/Space l/CombDblBreve l/Space l/CombDblCircum l/Space l/CombDblTilde l/Space l/CombDblMacron l/Space l/CombDblDiaer l/Space/LtnSmLCaron.Caron/CombDblInvBreve.high/LtnSmLCaron.Caron/Space/LtnSmLCaron.Caron/CombDblBreve.high/LtnSmLCaron.Caron/Space/LtnSmLCaron.Caron/CombDblCircum.high/LtnSmLCaron.Caron/Space/LtnSmLCaron.Caron/CombDblTilde.high/LtnSmLCaron.Caron/Space/LtnSmLCaron.Caron/CombDblMacron.high/LtnSmLCaron.Caron/Space/LtnSmLCaron.Caron/CombDblDiaer.high/LtnSmLCaron.Caron 
@@ -37,13 +37,12 @@ O/CombDblInvBreve.mid OO/CombDblBreve.mid OO/CombDblCircum.mid OO/CombDblTilde.m
 o/CombDblInvBreve.low oo/CombDblBreve.low oo/CombDblCircum.low oo/CombDblTilde.low oo/CombDblMacron.low oo/CombDblDiaer.low o
 o/CombDblInvBreveBlw.blwhigh oo/CombDblBreveBlw.blwhigh oo/CombDblMacronBlw.blwhigh oo/CombDblRtArrwBlw.blwhigh o
 g/CombDblInvBreveBlw gg/CombDblBreveBlw gg/CombDblMacronBlw gg/CombDblRtArrwBlw g/Space g/CombDblBreveBlw/CombDblInvBreveBlw.blwlow gg/CombDblBreveBlw/CombDblBreveBlw.blwlow gg/CombDblBreveBlw/CombDblMacronBlw.blwlow gg/CombDblBreveBlw/CombDblRtArrwBlw.blwlow g</string>
+    <string>/LtnSmLambda/LtnSmLambdaStrk/LtnCapLambda/LtnCapLambdaStrk/LtnCapLStrk</string>
   </array>
   <key>com.schriftgestaltung.customParameter.GSFont.disablesAutomaticAlignment</key>
   <true/>
   <key>com.schriftgestaltung.customParameter.GSFont.disablesLastChange</key>
   <true/>
-  <key>com.schriftgestaltung.customParameter.GSFont.uniqueID</key>
-  <string>SIL Global: Doulos SIL Regular: 2024</string>
   <key>com.schriftgestaltung.customParameter.GSFont.useNiceNames</key>
   <integer>0</integer>
   <key>com.schriftgestaltung.customParameter.GSFontMaster.customValue</key>
