Sync OpenType changes from Charis to Doulos Also update classes and ftml for prior UFO work

--- a/source/featureinfo.yaml
+++ b/source/featureinfo.yaml
@@ -94,7 +94,7 @@
   doc_group: num
   doc_order: 816
   doc_name: Six
-  doc_affects: U+0037 U+2077 U+2087 U+2150 U+215E
+  doc_affects: U+0036 U+2076 U+2086 U+2159 U+215A
   doc_sample: 
   ftml_comment: 
   ftml_string: 
@@ -121,7 +121,7 @@
   doc_group: num
   doc_order: 817
   doc_name: Seven
-  doc_affects: U+0037 U+2077 U+2087
+  doc_affects: U+0037 U+2077 U+2087 U+2150 U+215E
   doc_sample: 
   ftml_comment: 
   ftml_string: 
